Bug 219265 - Crash while trying to remove metacontact. [Kopete::MetaContact::displayName, ChatMessagePart::formatName, ChatView::slotContactRemoved]
Summary: Crash while trying to remove metacontact. [Kopete::MetaContact::displayName, ...
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 209284 217665 229443 230202 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-19 02:26 UTC by David Martínez Moreno
Modified: 2010-04-11 01:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Martínez Moreno 2009-12-19 02:26:34 UTC
Application that crashed: kopete
Version of the application: 0.80.2
KDE Version: 4.3.4 (KDE 4.3.4)
Qt Version: 4.5.3
Operating System: Linux 2.6.30-2-amd64 x86_64
Distribution: Debian GNU/Linux unstable (sid)

What I was doing when the application crashed:
I was trying to remove a metacontact made of three GChat contacts and after asking me if I want to maintain status for all three, it crashed.

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
The current source language is "auto; currently c".
[Current thread is 1 (Thread 0x7f6484704750 (LWP 26698))]

Thread 4 (Thread 0x7f646c607910 (LWP 26949)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:261
#1  0x00007f6481ed8499 in QWaitConditionPrivate::wait (this=0x20b8c20, mutex=0x20b8c18, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=0x20b8c20, mutex=0x20b8c18, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007f647f25e3b4 in QHostInfoAgent::run (this=0x20b8c00) at kernel/qhostinfo.cpp:260
#4  0x00007f6481ed74a5 in QThreadPrivate::start (arg=0x20b8c00) at thread/qthread_unix.cpp:188
#5  0x00007f647c4d773a in start_thread (arg=<value optimized out>) at pthread_create.c:300
#6  0x00007f6480cc569d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f646b7b0910 (LWP 26950)):
#0  0x00007f6480cba743 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f647c72b869 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f647c72bb4c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f6481fe53b6 in QEventDispatcherGlib::processEvents (this=0x2037dd0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:409
#4  0x00007f6481fbb562 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f6481fbb934 in QEventLoop::exec (this=0x2036970, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f646f7af14b in QCA::SyncThread::run() () from /usr/lib/libqca.so.2
#7  0x00007f6481ed74a5 in QThreadPrivate::start (arg=0x2037830) at thread/qthread_unix.cpp:188
#8  0x00007f647c4d773a in start_thread (arg=<value optimized out>) at pthread_create.c:300
#9  0x00007f6480cc569d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()
The current source language is "auto; currently asm".

Thread 2 (Thread 0x7f646afaf910 (LWP 26951)):
#0  0x00007f6480cba743 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=4264) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f647c72b869 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f647c72bb4c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f6481fe53b6 in QEventDispatcherGlib::processEvents (this=0x216d0f0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:409
#4  0x00007f6481fbb562 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f6481fbb934 in QEventLoop::exec (this=0x211fcc0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f646fc02382 in XMPP::SyncThread::run (this=0x20df6a0) at ../../../../../kopete/protocols/jabber/libiris/iris/irisnet/corelib/netinterface.cpp:151
#7  0x00007f6481ed74a5 in QThreadPrivate::start (arg=0x20df6a0) at thread/qthread_unix.cpp:188
#8  0x00007f647c4d773a in start_thread (arg=<value optimized out>) at pthread_create.c:300
#9  0x00007f6480cc569d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()
The current source language is "auto; currently c".

Thread 1 (Thread 0x7f6484704750 (LWP 26698)):
[KCrash Handler]
#5  QString::constData (this=0x18fb510, other=...) at ../../include/QtCore/../../src/corelib/tools/qstring.h:699
#6  QString::operator< (this=0x18fb510, other=...) at tools/qstring.cpp:1973
#7  0x00007f6483e21081 in qMapLessThanKey<QString> (this=<value optimized out>, key=...) at /usr/include/qt4/QtCore/qmap.h:104
#8  QMap<QString, Kopete::Property>::findNode (this=<value optimized out>, key=...) at /usr/include/qt4/QtCore/qmap.h:432
#9  QMap<QString, Kopete::Property>::contains (this=<value optimized out>, key=...) at /usr/include/qt4/QtCore/qmap.h:500
#10 Kopete::PropertyContainer::hasProperty (this=<value optimized out>, key=...) at ../../../kopete/libkopete/kopetepropertycontainer.cpp:108
#11 0x00007f6483e056f4 in Kopete::nameFromContact (c=0x19fd310) at ../../../kopete/libkopete/kopetemetacontact.cpp:693
#12 0x00007f6483e07b4c in Kopete::MetaContact::displayName (this=0x1967e50) at ../../../kopete/libkopete/kopetemetacontact.cpp:658
#13 0x00007f6470a4a454 in ChatMessagePart::formatName (this=0x1dba590, contact=<value optimized out>, format=Qt::PlainText) at ../../../../kopete/kopete/chatwindow/chatmessagepart.cpp:1232
#14 0x00007f646fece889 in ChatView::slotContactRemoved (this=0x1d2fbf0, contact=0x1502930, reason=<value optimized out>, format=<value optimized out>, suppressNotification=<value optimized out>)
    at ../../../../kopete/kopete/chatwindow/chatview.cpp:583
#15 0x00007f646fecedc3 in ChatView::qt_metacall (this=0x1d2fbf0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffaa2b0d80) at ./chatview.moc:177
#16 0x00007f6481fd1df2 in QMetaObject::activate (sender=0x20d8dc0, from_signal_index=<value optimized out>, to_signal_index=15, argv=0x17922ca) at kernel/qobject.cpp:3112
#17 0x00007f6483ddac33 in Kopete::ChatSession::contactRemoved (this=0x18fb510, _t1=0x1502930, _t2=<value optimized out>, _t3=Qt::PlainText, _t4=false) at ./kopetechatsession.moc:279
#18 0x00007f6483ddb351 in Kopete::ChatSession::slotContactDestroyed (this=0x20d8dc0, contact=0x1502930) at ../../../kopete/libkopete/kopetechatsession.cpp:525
#19 0x00007f6483dde0ac in Kopete::ChatSession::qt_metacall (this=0x20d8dc0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffaa2b0f40) at ./kopetechatsession.moc:224
#20 0x00007f646fb2e740 in JabberChatSession::qt_metacall (this=0x18fb510, _c=24975104, _id=-255, _a=0x17922ca) at ./jabberchatsession.moc:72
#21 0x00007f6481fd1df2 in QMetaObject::activate (sender=0x1502930, from_signal_index=<value optimized out>, to_signal_index=10, argv=0x17922ca) at kernel/qobject.cpp:3112
#22 0x00007f6483de8af2 in Kopete::Contact::contactDestroyed (this=0x18fb510, _t1=0x1502930) at ./kopetecontact.moc:200
#23 0x00007f6483de95df in ~Contact (this=0x18fb510, __in_chrg=<value optimized out>) at ../../../kopete/libkopete/kopetecontact.cpp:124
#24 0x00007f646fb14009 in ~JabberBaseContact (this=0x1502930, __in_chrg=<value optimized out>) at ../../../../kopete/protocols/jabber/jabberbasecontact.h:33
#25 ~JabberContact (this=0x1502930, __in_chrg=<value optimized out>) at ../../../../kopete/protocols/jabber/jabbercontact.cpp:134
#26 0x00007f6481fcafe1 in QObjectPrivate::deleteChildren (this=0x1967e80) at kernel/qobject.cpp:1846
#27 0x00007f6481fd33af in ~QObject (this=0x1967e50, __in_chrg=<value optimized out>) at kernel/qobject.cpp:836
#28 0x00007f6483e06b67 in ~MetaContact (this=0x1967e50, __in_chrg=<value optimized out>) at ../../../kopete/libkopete/kopetemetacontact.cpp:78
#29 0x00007f6481fcc6e5 in QObject::event (this=0x1967e50, e=0x17d1700) at kernel/qobject.cpp:1093
#30 0x00007f648143601d in QApplicationPrivate::notify_helper (this=0x14a0280, receiver=0x1967e50, e=0x1848b40) at kernel/qapplication.cpp:4065
#31 0x00007f648143e07a in QApplication::notify (this=0x7fffaa2b1a60, receiver=0x1967e50, e=0x1848b40) at kernel/qapplication.cpp:4030
#32 0x00007f6482bd7e06 in KApplication::notify (this=0x7fffaa2b1a60, receiver=0x1967e50, event=0x1848b40) at ../../kdeui/kernel/kapplication.cpp:302
#33 0x00007f6481fbcc9c in QCoreApplication::notifyInternal (this=0x7fffaa2b1a60, receiver=0x1967e50, event=0x1848b40) at kernel/qcoreapplication.cpp:610
#34 0x00007f6481fbd8e4 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x1472180) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#35 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1472180) at kernel/qcoreapplication.cpp:1247
#36 0x00007f6481fe57d3 in QCoreApplication::sendPostedEvents (s=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#37 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:276
#38 0x00007f647c72813a in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#39 0x00007f647c72b998 in ?? () from /lib/libglib-2.0.so.0
#40 0x00007f647c72bb4c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#41 0x00007f6481fe539c in QEventDispatcherGlib::processEvents (this=0x1471de0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:407
#42 0x00007f64814ccf1f in QGuiEventDispatcherGlib::processEvents (this=0x18fb510, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#43 0x00007f6481fbb562 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#44 0x00007f6481fbb934 in QEventLoop::exec (this=0x7fffaa2b19b0, flags=...) at kernel/qeventloop.cpp:201
#45 0x00007f6481fbdba4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#46 0x0000000000415686 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../kopete/kopete/main.cpp:104

Reported using DrKonqi
Comment 1 Dario Andres 2009-12-19 15:10:16 UTC
This could be related to bug 217665. Thanks
Comment 2 Roman Jarosz 2009-12-24 16:19:39 UTC
SVN commit 1065866 by rjarosz:

Don't try to access MetaContact if it has been already deleted.

BUG: 219265


 M  +13 -1     kopetecontact.cpp  
 M  +5 -0      kopetecontact.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065866
Comment 3 Roman Jarosz 2009-12-24 16:19:50 UTC
*** Bug 217665 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2010-04-11 01:00:05 UTC
*** Bug 229443 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2010-04-11 01:01:23 UTC
*** Bug 230202 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2010-04-11 01:01:38 UTC
*** Bug 209284 has been marked as a duplicate of this bug. ***