Don't try to access MetaContact if it has been already deleted.

BUG: 219265

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1065866